// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/Header should correctly render filtered templates that are not hidden 1`] = `
<div
  className="metadata-instance-editor-header"
>
  title
  <TemplateDropdown
    onAdd={[MockFunction]}
    templates={
      Array [
        Object {
          "displayName": "visible-template",
          "isHidden": false,
        },
      ]
    }
    usedTemplates={Array []}
  />
</div>
`;

exports[`features/metadata-instance-editor/fields/Header should correctly render when editable 1`] = `
<div
  className="metadata-instance-editor-header"
>
  <h4
    className="metadata-instance-editor-title"
  >
    <FormattedMessage
      defaultMessage="Templates"
      id="boxui.metadataInstanceEditor.templatesTitle"
    />
  </h4>
</div>
`;

exports[`features/metadata-instance-editor/fields/Header should correctly render when not editable 1`] = `
<div
  className="metadata-instance-editor-header"
>
  <h4
    className="metadata-instance-editor-title"
  >
    <FormattedMessage
      defaultMessage="Templates"
      id="boxui.metadataInstanceEditor.templatesTitle"
    />
  </h4>
</div>
`;

exports[`features/metadata-instance-editor/fields/Header should correctly render with custom title 1`] = `
<div
  className="metadata-instance-editor-header"
>
  title
</div>
`;
